--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "httpx>=0.25.0",
     "structlog>=23.2.0",
     "prometheus-client>=0.19.0",
+    "websockets>=15.0.1",
 ]
 
 [project.optional-dependencies]
